Added hardhat config

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts-upgradeable": "^4.6.0",
     "@truffle/hdwallet-provider": "^2.0.9",
+    "dotenv": "^16.0.3",
     "hardhat": "^2.9.9",
     "hardhat-deploy": "^0.11.10"
   }
